# purdue-youtube-ip-new

./: .gitignore  README.md  bertopic.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
dashboard/: app.py
dashboard/components/: layout.py  sidebar.py  theme.py  visualizations.py
dashboard/views/: channel_analysis.py  channel_insights.py  outlier_finder.py  recommendations.py  tools.py  ytuber.py
docs/: ARCHITECTURE.md  DEPLOYMENT_AND_VERSIONS.md
frontend/outlier-search-form/: package-lock.json  package.json  tailwind.config.ts
frontend/outlier-search-form/src/: App.tsx  index.css  main.tsx  schema.ts  types.ts
frontend/outlier-search-form/src/components/: ui.tsx
src/services/: __init__.py  outliers_finder.py
tests/unit/: test_outlier_search_form.py  test_outliers_finder.py
youtube_ip_v3/: __init__.py
youtube_ip_v3/components/: __init__.py  outlier_search_form.py
youtube_ip_v3/components/outlier_search_form_assets/: index.css
